# eyeD3

./: .cookiecutter.json  .cookiecutter.yml  .gitchangelog.rc  .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  COPYING  ChangeLog  HISTORY.rst  MANIFEST.in  Makefile  Makefile.in  README  README-poetry.md  README.rst  acsite.m4  autogen.sh  bitbucket-pipelines.yml  configure.ac  datecompat.py  dev-requirements-26.txt  dev-requirements.txt  fabfile.py  issue382-genres.py  mkenv.sh  pavement.py  project.json  pyproject.toml  release-requirements.txt  requirements-26.txt  requirements.txt  setup.cfg  setup.py  tox.ini  version
.github/workflows/: codeql-analysis.yml  main.yml
doc/: Makefile  cli.rst  compliance.rst  conf.py  index.rst  install.rst  intro.rst
docs/: Makefile  api.rst  changelog.rst  cli.rst  compliance.rst  conf.py  eyeD3.1  eyed3.core.rst  eyed3.id3.rst  eyed3.mp3.rst  eyed3.plugins.rst  eyed3.rst  eyed3.utils.rst  index.rst  install.rst  installation.rst  license.rst  make.bat  modules.rst  plugins.rst  readme.rst  usage.rst
docs/api/: eyed3.id3.rst  eyed3.mp3.rst  eyed3.plugins.rst  eyed3.rst  eyed3.utils.rst  id3.rst  modules.rst  mp3.rst  plugins.rst  utils.rst
docs/plugins/: art_plugin.rst  classic_plugin.rst  display_plugin.rst  extract_plugin.rst  fixup_plugin.rst  genres_plugin.rst  itunes_plugin.rst  json_plugin.rst  lameinfo_plugin.rst  mimetypes_plugin.rst  mp3_plugin.rst  nfo_plugin.rst  pymod_plugin.rst  stats_plugin.rst  xep118_plugin.rst  yaml_plugin.rst
etc/: config.ini  eyeD3.bash  eyeD3rc  mycog.py  pylint.conf
examples/: chapters.py  cli_examples.sh  config.ini  echo2.py  tag_example.py
examples/plugins/: echo.py  echo2.py
eyed3/: __about__.py  __init__.py  __regarding__.py  core.py  main.py  mimetype.py
eyed3/id3/: __init__.py  apple.py  frames.py  headers.py  tag.py
eyed3/mp3/: __init__.py  headers.py
eyed3/plugins/: DisplayPattern.ebnf  __init__.py  _display_parser.py  art.py  classic.py  display.py  fixup.py  genres.py  itunes.py  jsontag.py  lameinfo.py  mimetype.py  nfo.py  null.py  pymod.py  stats.py  the.py  xep_118.py  yamltag.py
eyed3/utils/: __init__.py  art.py  binfuncs.py  cli.py  console.py  log.py  prompt.py
eyed3/vorbis/: __init__.py  audio.py  comments.py
requirements/: dev-requirements.txt  dev.txt  extra-requirements.txt  extra_art-plugin.txt  extra_display-plugin.txt  extra_yaml-plugin.txt  main.txt  release.txt  requirements.txt  requirements.yml  test-requirements.txt  test.txt  test_pathlib.txt  test_py33.txt
src/eyed3/: __about__.py  __init__.py  binfuncs.py  compat.py  core.py  info.py  info.py.in  main.py
src/eyed3/id3/: __init__.py  apple.py  frames.py  headers.py  tag.py
src/eyed3/mp3/: __init__.py  headers.py
src/eyed3/plugins/: DisplayPattern.ebnf  __init__.py  _display_parser.py  art.py  classic.py  default.py  display.py  display_parser.py  examples.py  extract.py  fixup.py  flair.py  genres.py  itunes.py  jsontag.py  lameinfo.py  lastfm.py  nfo.py  purify.py  pymod.py  statistics.py  stats.py  xep_118.py
src/eyed3/utils/: __init__.py  art.py  binfuncs.py  cli.py  console.py  log.py  prompt.py
src/eyed3/vorbis/: __init__.py  audio.py  comments.py
src/test/: __init__.py  compat.py  conftest.py  test__init__.py  test_binfuncs.py  test_classic_plugin.py  test_console.py  test_core.py  test_default_plugin.py  test_display_plugin.py  test_factory.py  test_main.py  test_plugins.py  test_stats_plugins.py  test_utils.py
src/test/id3/: test_frames.py  test_headers.py  test_id3.py  test_tag.py
src/test/mp3/: test_infos.py  test_mp3.py
test/: compat.py  conftest.py  test_binfuncs.py  test_classic_plugin.py  test_console.py  test_core.py  test_display_plugin.py  test_main.py  test_mimetype.py  test_plugins.py  test_utils.py
test/id3/: test_frames.py  test_id3.py  test_rva.py  test_tag.py
test/mp3/: test_mp3.py
tests/: __init__.py  conftest.py  pytest.ini  test__init__.py  test_classic_plugin.py  test_core.py  test_issues.py  test_jsonyaml_plugin.py  test_lameinfo_plugin.py  test_main.py  test_stats_plugins.py
tests/id3/: test_headers.py  test_id3.py  test_rva.py  test_tag.py
tests/mp3/: test_infos.py
