[tool.poetry]
name = "eyeD3"
version = "0.10.0a0"
description = "Python audio data toolkit (ID3 and MP3)"
authors = ["Travis Shirk <travis@pobox.com>"]
license = "GPL-3.0-or-later"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
keywords = ["id3", "mp3", "python"]
readme = "README.rst"
packages = [
    {include = "eyed3"},
]
include = [
    "poetry.lock",
    "README.rst", "LICENSE", "Makefile", "requirements.txt", "MANIFEST.in",
    "AUTHORS.rst", "CONTRIBUTING.rst", "HISTORY.rst",
    "tox.ini",
    "tests/**/*.py",
    "docs/",
    "examples/*",
    "eyed3/plugins/DisplayPattern.ebnf",
]
exclude = [
    "docs/_build",
]

[tool.regarding]
release_name = "True Blue"
years = "2002-2020"

[tool.poetry.scripts]
eyeD3 = "eyed3.main:_main"

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version = "^0.8", python = "~3.6"}
filetype = "^1.0.7"
deprecation = "^2.1.0"
"ruamel.yaml" = {version = "^0.16.12", optional = true}
grako = {version = "^3.99.9", optional = true}
Pillow = {version = "^8.0.1", optional = true}
pylast = {version = "^4.0.0", optional = true}
requests = {version = "^2.25.0", optional = true}

[tool.poetry.dev-dependencies]
regarding = "^0.1.4"
"nicfit.py" = {extras = ["cookiecutter"], version = "^0.8.7"}
Sphinx = "^3.3.1"
sphinx_rtd_theme = "^0.5.0"
twine = "^3.2.0"
wheel = "^0.36.1"
pyaml = "^20.4.0"
sphinx-issues = "^1.2.0"
cogapp = "^3.0.0"
paver = "^1.3.4"
gitchangelog = {git = "https://github.com/nicfit/gitchangelog.git"}
tox = "^3.20.1"

[tool.poetry.extras]
yaml-plugin = ["ruamel.yaml"]
display-plugin = ["grako"]
art-plugin = ["Pillow", "pylast", "requests"]
test = ["pytest", "pytest-cov", "factory-boy"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell]
[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
