[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.regarding]
release_name = "Sunshine"
years = "2002-2022"

[tool.poetry]
name = "eyeD3"
version = "0.9.7"
description = "Python audio data toolkit (ID3 and MP3)"
authors = ["Travis Shirk <travis@pobox.com>"]
maintainers = ["Travis Shirk <travis@pobox.com>"]
homepage = "https://eyeD3.nicfit.net/"
repository = "https://github.com/nicfit/eyeD3"
license = "GPL-3.0-or-later"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["id3", "mp3", "python"]
readme = "README.rst"
packages = [
    {include = "eyed3"},
]
include = [
    "poetry.lock",
    "README.rst", "LICENSE", "Makefile", "requirements.txt", "MANIFEST.in",
    "AUTHORS.rst", "CONTRIBUTING.rst", "HISTORY.rst",
    "tox.ini",
    "tests/**/*.py",
    "docs/",
    "requirements/*.txt",
    "examples/*",
    "eyed3/plugins/DisplayPattern.ebnf",
]
exclude = [
    "docs/_build",
]

[tool.poetry.scripts]
eyeD3 = "eyed3.main:_main"

[tool.poetry.dependencies]
python = "^3.7"
filetype = "^1.0.7"
deprecation = "^2.1.0"
# yaml-plugin extra
"ruamel.yaml" = {version = "^0.16.12", optional = true}
# art-plugin extra
Pillow = {version = ">=8.0.1,<10.0.0", optional = true}
pylast = {version = "^4.0.0", optional = true}
requests = {version = "^2.25.0", optional = true}
# Test extra
pytest = {version = "^6.2.1", optional = true}
coverage = {version = "^5.3.1", optional = true, extras = ["toml"]}
pytest-cov = {version = "^2.10.1", optional = true}
tox = {version = "^3.20.1", optional = true}
factory-boy = {version = "^3.1.0", optional = true}
flake8 = {version = "^3.8.4", optional = true}
check-manifest = {version = "^0.45", optional = true}

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "tox", "factory-boy", "flake8",
        "check-manifest"]
yaml-plugin = ["ruamel.yaml"]
art-plugin = ["Pillow", "pylast", "requests"]

[tool.poetry.group.dev.dependencies]
gitchangelog = {git = "https://github.com/nicfit/gitchangelog.git", rev = "nicfit.py"}
regarding = "^0.1.4"
wheel = "^0.37.1"
twine = "^4.0.1"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
sphinx-issues = "^3.0.1"
cogapp = "^3.3.0"
Paver = "^1.3.4"
"nicfit.py" = {version = "0.8.7", extras = ["cookiecutter"]}
poetry2setup = {git = "git@github.com:abersheeran/poetry2setup.git"}

[tool.coverage.html]
directory = "build/tests/coverage"
