[metadata]
name = eyeD3
version = 0.9.6a0
author = Travis Shirk
author_email = travis@pobox.com
description = Python audio data toolkit (ID3 and MP3)
url = http://eyed3.nicfit.net/
license_file = LICENSE

[tool:regarding]
release_name =
years = 2002-2020

[wheel]
universal = 1

[flake8]
max-line-length = 100
statistics = 1
ignore = E121,E124,E126,E127,E128,E131,E252,E266,E741,W503,W504

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*

[tool:pytest]
addopts = --verbose
